# omni-llm-kit

./: .gitignore  Cargo.toml
src/: lib.rs
src/anthropic/: anthropic.rs  mod.rs
src/common/: mod.rs  shared_string.rs  utils.rs
src/http_client/: http_client.rs  mod.rs
src/model/: errors.rs  language_provider.rs  mod.rs  model.rs  request.rs  types.rs
src/models/: mod.rs
src/models/anthropic_provider/: anthropic.rs  mod.rs
src/models/openai_provider/: event_mapper.rs  mod.rs  openai_model.rs  provider.rs  types.rs
src/openai/: mod.rs  openai.rs
src/reqwest_client/: http_client_tls.rs  mod.rs  reqwest_client.rs
src/tool/: mod.rs  tool.rs  tool_registry.rs
